<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Application</string>
    <string name="menu">Меню</string>
    <string name="favorite">Избранное</string>
    <string name="watchLater">Посмотреть позже</string>
    <string name="selection">Подборки</string>
    <string name="settings">Настройки</string>
    <string name="menu_home_title_text">Главная</string>
    <string name="settings_title_text">Настройка подборок</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>

