<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/baseline_favorite_"
        android:title="@string/favorite"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/baseline_class_later"
        android:title="@string/watchLater"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/baseline_bookmark_"
        android:title="@string/selection"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_home_title_text"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_applications"
        android:title="@string/settings_title_text"
        app:showAsAction="withText"/>
</menu>